--- a/index.html
+++ b/index.html
@@ -13,27 +13,24 @@
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
             <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <p>Athens, Attiki, Greece</p>
+            <a href="https://twitter.com/parasleivadaros"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/paraskevasleivadaros/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/paraskevasleivadaros/"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
+            <p>System Engineer based in Athens</p>
             <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
+            <p>Intracom Telecom</p>
 
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <p>SQL, RHEL, Ansible</p>
             <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
+            <a href="https://theatrikiopa.eu/">theatrikiopa.eu</a>
+            <a href="https://stats.foldingathome.org/donor/id/71036274">foldingathome.gr</a>
             <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <p>paraskevasleivadaros@email.com</p>
         </div>
     </div>
 </body>
