--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
+    <title>Leivadaros Paraskevas</title>
 </head>
 <body>
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
+            <h2>Paraskevas Leivadaros</h2>
             <p>Athens, Attiki, Greece</p>
             <a href="https://twitter.com/parasleivadaros"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/paraskevasleivadaros/"><i class="fab fa-linkedin"></i></a>
