--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="https://theatrikiopa.eu/">theatrikiopa.eu</a>
             <a href="https://stats.foldingathome.org/donor/id/71036274">foldingathome.gr</a>
             <h2>Contact</h2>
-            <p><a href="mailto:paraskevas@leivadaros.dev">paraskevas@leivadaros.dev</a></p>
+            <p><a href="mailto:paraskevasleivadaros@gmail.com">paraskevasleivadaros@gmail.com</a></p>
         </div>
     </div>
 </body>
